fix: fix gradle